# xin

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  codecov.yaml  compose.yaml  pyproject.toml  tox.ini
.github/workflows/: cicd.yaml
docs/source/: conf.py  index.rst  modules.rst  xin.reader.rst  xin.rst  xin.writer.rst
tests/: conftest.py  test_hello.py  test_parser.py
tests/reader/: test_nosql.py  test_sql.py
xin/: db.py  parser.py
xin/reader/: nosql.py  sql.py
