[project]
name = "xin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.2.0",
    "asyncpg>=0.29.0",
    "coverage>=7.6.1",
    "motor>=3.6.0",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pymssql>=2.3.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "sqlalchemy>=2.0.35",
    "pydantic>=2.9.2",
    "polars>=1.8.2",
    "pandas>=2.2.3",
]


[tool.ruff]
line-length = 120
