[project]
name = "xin"
version = "0.1.0"
description = "One ORM Wrapper to Rule Them All"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "asyncpg>=0.29.0",
    "motor>=3.6.0",
    "mypy>=1.11.2",
    "pymssql>=2.3.1",
    "sqlalchemy>=2.0.35",
    "pydantic>=2.9.2",
    "polars>=1.8.2",
    "pandas>=2.2.3",
]
license = { file = "LICENSE" }

[project.optional-dependencies]
docs = [
    "furo>=2024.8.6",
    "sphinx>=8.0.2",
]
formatting = [
    "pre-commit>=3.8.0",
]
dev = [
    "coverage>=7.6.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]


[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.ruff]
line-length = 120


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.uv]
cache-keys = [{ file = "uv.lock" }]
