[project]
name = "xin"
version = "0.2.1"
description = "One ORM Wrapper to Rule Them All"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "asyncpg>=0.29.0",
    "mypy>=1.11.2",
    "pymssql>=2.3.1",
    "sqlalchemy>=2.0.35",
    "pydantic>=2.9.2",
    "polars>=1.8.2",
    "pandas>=2.2.3",
    "cryptography>=43.0.1",
    "pandas-stubs>=2.2.2.240909",
    "pyarrow>=17.0.0",
    "pymongo>=4.10.0",
]
license = { file = "LICENSE" }
authors = [{name="Masum Billal", email="billalmasum93@gmail.com"}]

[project.optional-dependencies]
docs = [
    "furo>=2024.8.6",
    "pydata-sphinx-theme>=0.15.4",
    "sphinx>=8.0.2",
]
formatting = [
    "pre-commit>=3.8.0",
]
dev = [
    "coverage>=7.6.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]


[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.ruff]
line-length = 120


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

# [[tool.mypy.overrides]]
# module = "pymongo.*"
# ignore_errors = true
# disable_error_code = ["type-arg"]

[tool.uv]
cache-keys = [{ file = "uv.lock" }]
package = true
